# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2022-09-06 Michael Truog   <mjtruog at protonmail dot com>

    * Fix the logging_set CloudI Service API usage of file_sync
      configuration
    * Improve cloudi_service_health_check interval timing

2022-09-03 Michael Truog   <mjtruog at protonmail dot com>

    * Change CloudI API parameter name pid to source
    * Improve cloudi_service_health_check
        * Ensure host ip addresses are ordered and unique
        * Add environment variable use in hostnames

2022-09-02 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi shell script environment variable cleanup

2022-09-01 Michael Truog   <mjtruog at protonmail dot com>

    * Add the cloudi_service_health_check arguments
      dns_ip_added, dns_ip_removed_healthy and dns_ip_removed_failed
      for tracking DNS lookup response changes
    * Improve cloudi_service_health_check logging level use

2022-08-31 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_availability as a module for usage in internal
      CloudI services (previously was named cloudi_core_i_status)
    * Add the cloudi_core header files cloudi_availability.hrl and
      cloudi_constants.hrl for usage in internal CloudI services
    * Improve cloudi_service_health_check functionality
        * Allow failed TCP IPs to expire when they are missing from
          a valid DNS lookup response
        * Add tcp_test function for request/response testing
        * Improve configuration and hosts information

2022-08-29 Michael Truog   <mjtruog at protonmail dot com>

    * Add availability tracking to cloudi_service_health_check
    * Add load balancing to cloudi_service_health_check

2022-08-27 Michael Truog   <mjtruog at protonmail dot com>

    * Add restored time tracking to cloudi_service_health_check

2022-08-26 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_health_check for remote host health checks
